--- a/app/src/index.html
+++ b/app/src/index.html
@@ -12,6 +12,6 @@
   <!-- <link href="/assets/fonts/material-icons.css" rel="stylesheet"> -->
 </head>
 <body>
-  <app-root></app-root>
+  <udh-root></udh-root>
 </body>
 </html>
